test/libsolidity/syntaxTests/specialFunctions/abidecode/abid_decode_invalid_argument_function.sol
contract C {
    function f() pure public {
        abi.decode("", ((true ? addmod : addmod)(1, 2, 3)));
    }
}
// ----
// TypeError 1039: (68-101): Argument has to be a type name.
